# JBR-Scene-generator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  buildAndRun.sh  run-container.sh
resources/: material.mtl  scene.txt
src/: SceneConfig.cpp  SceneConfig.h  common.cpp  common.h  main.cpp
